@@ -33,6 +33,7 @@ function Terry(storage) {
 	
 	this.level    = 5;
 	this.sexlevel = 1;
+	this.SetExpToLevel();
 	
 	this.body.DefMale();
 	this.body.muscleTone.base = 0.1;
